--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts,.tsx || echo \"lint skipped\"",
+    "test": "vitest run",
     "start": "npm run build && npm --prefix example run dev -- --port 5173 --strictPort",
     "start:preview": "npm run build && npm --prefix example run build && npm --prefix example run preview -- --port 4173 --strictPort",
     "db:up": "docker inspect chatbot1-pg >NUL 2>&1 && docker start chatbot1-pg || docker run -d --name chatbot1-pg -e POSTGRES_PASSWORD=chatpass -e POSTGRES_DB=chatbot1 -p 5432:5432 postgres:16-alpine",
@@ -35,6 +36,8 @@
   "devDependencies": {
     "typescript": "^5.0.0",
     "tsup": "^8.0.0",
+    "@types/node": "^20.14.10",
+    "vitest": "^1.6.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "concurrently": "^9.0.0"
