--- a/example/.env.example
+++ b/example/.env.example
@@ -1,3 +1,12 @@
 DATABASE_URL=postgresql://user:password@localhost:5432/chatbot1
 OPENAI_API_KEY=
 PINECONE_API_KEY=
+BACON_TRANSPORT_MODE=polling
+BACON_ENABLE_WEBSOCKET=true
+BACON_ENABLE_HTTP_POLLING=true
+BACON_POLL_INTERVAL_MS=1500
+BACON_ADMIN_TOKEN=
+BACON_SETTINGS_FILE=./.data/admin-settings.json
+BACON_PLUGIN_LOGGING=true
+BACON_PLUGIN_TRACING=false
+BACON_PLUGIN_AUTH_REFRESHER=false
