--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts,.tsx || echo \"lint skipped\"",
     "test": "vitest run",
+    "smoke:ai": "vitest run packages/bacon-backend/__tests__/ai.smoke.test.ts",
     "start": "npm run build && npm --prefix example run dev -- --port 5173 --strictPort",
     "start:preview": "npm run build && npm --prefix example run build && npm --prefix example run preview -- --port 4173 --strictPort",
     "db:up": "docker inspect chatbot1-pg >NUL 2>&1 && docker start chatbot1-pg || docker run -d --name chatbot1-pg -e POSTGRES_PASSWORD=chatpass -e POSTGRES_DB=chatbot1 -p 5432:5432 postgres:16-alpine",
