--- a/packages/bacon-backend/package.json
+++ b/packages/bacon-backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "busboy": "^1.6.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "uuid": "^9.0.1",
     "ws": "^8.18.0"
