--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts,.tsx || echo \"lint skipped\"",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "env:check": "node scripts/env-check.js",
     "smoke:ai": "vitest run packages/bacon-backend/__tests__/ai.smoke.test.ts",
     "start": "npm run build && npm --prefix example run dev -- --port 5173 --strictPort",
     "start:preview": "npm run build && npm --prefix example run build && npm --prefix example run preview -- --port 4173 --strictPort",
@@ -46,6 +48,7 @@
     "vitest": "^1.6.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "concurrently": "^9.0.0"
+    "concurrently": "^9.0.0",
+    "@vitest/coverage-v8": "^1.6.1"
   }
 }
