--- a/packages/bacon-backend/package.json
+++ b/packages/bacon-backend/package.json
@@ -10,6 +10,8 @@
     "build": "tsup"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "busboy": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
