Add stack scaffolding and CLI tooling

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
 PORT=3001
 HOST=0.0.0.0
-# POSTGRES_URL=postgres://user:pass@localhost:5432/chatbot1
-# BEARER_TOKEN=change-me
-# JWT_SECRET=supersecret
+BASE_URL=http://localhost:3001
+# Database + cache
+DATABASE_URL=postgres://bacon:changeme@localhost:5432/bacon
+# Uncomment to point redis-backed workflows and rate limiters at a remote cache
+# REDIS_URL=redis://localhost:6379
+# Auth + API providers
+JWT_SECRET=please-change-me
+BEARER_TOKEN=optional-bearer-token-for-admin
+GROK_API_KEY=replace-with-provider-key
+# Frontend/admin origins allowed by CORS. Use comma-separated hostnames without schemes.
+ALLOWED_ORIGINS=localhost:4173,localhost:5173
+# Transports
 ENABLE_WEBSOCKET=true
 ENABLE_HTTP_POLLING=true
-ALLOWED_ORIGINS=*
