--- a/example/.env.example
+++ b/example/.env.example
@@ -1,12 +1,12 @@
-DATABASE_URL=postgresql://user:password@localhost:5432/chatbot1
-OPENAI_API_KEY=
-PINECONE_API_KEY=
+# Example stack defaults for the demo app. Copy to .env for local dev or compose overrides.
+BASE_URL=http://localhost:3001
+DATABASE_URL=postgres://bacon:changeme@db:5432/bacon
+REDIS_URL=redis://redis:6379
+JWT_SECRET=please-change-me
+BEARER_TOKEN=optional-admin-bearer
+GROK_API_KEY=replace-with-provider-key
+ALLOWED_ORIGINS=localhost:4173,localhost:5173
 BACON_TRANSPORT_MODE=polling
 BACON_ENABLE_WEBSOCKET=true
 BACON_ENABLE_HTTP_POLLING=true
 BACON_POLL_INTERVAL_MS=1500
-BACON_ADMIN_TOKEN=
-BACON_SETTINGS_FILE=./.data/admin-settings.json
-BACON_PLUGIN_LOGGING=true
-BACON_PLUGIN_TRACING=false
-BACON_PLUGIN_AUTH_REFRESHER=false
