--- a/example/package.json
+++ b/example/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.6.3",
     "vite": "^5.4.0",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.3.2"
   }
 }
