--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "bin": {
+    "create-bacon-app": "dist/cli/create-bacon-app.cjs"
+  },
   "scripts": {
     "build": "tsup",
+    "build:clean": "rm -rf dist && tsup",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts,.tsx || echo \"lint skipped\"",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "env:check": "node scripts/env-check.js",
     "smoke:ai": "vitest run packages/bacon-backend/__tests__/ai.smoke.test.ts",
+    "stack:up": "docker compose up --build -d",
+    "stack:down": "docker compose down --remove-orphans --volumes",
+    "stack:logs": "docker compose logs -f",
+    "stack:ps": "docker compose ps",
     "start": "npm run build && npm --prefix example run dev -- --port 5173 --strictPort",
     "start:preview": "npm run build && npm --prefix example run build && npm --prefix example run preview -- --port 4173 --strictPort",
     "db:up": "docker inspect chatbot1-pg >NUL 2>&1 && docker start chatbot1-pg || docker run -d --name chatbot1-pg -e POSTGRES_PASSWORD=chatpass -e POSTGRES_DB=chatbot1 -p 5432:5432 postgres:16-alpine",
@@ -49,6 +57,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "concurrently": "^9.0.0",
-    "@vitest/coverage-v8": "^1.6.1"
+    "@vitest/coverage-v8": "^1.6.1",
+    "yaml": "^2.5.1"
   }
 }
