--- a/package.json
+++ b/package.json
@@ -56,8 +56,13 @@
     "vitest": "^1.6.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "concurrently": "^9.0.0",
     "@vitest/coverage-v8": "^1.6.1",
-    "yaml": "^2.5.1"
+    "yaml": "^2.5.1",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "jsdom": "^24.1.0"
   }
 }
