--- a/package.json
+++ b/package.json
@@ -45,24 +45,27 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "busboy": "^1.6.0",
-    "pg": "^8.13.1",
-    "jsonwebtoken": "^9.0.2",
-    "uuid": "^9.0.1",
-    "ws": "^8.18.0",
-    "typescript": "^5.0.0",
-    "tsup": "^8.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.14.10",
-    "vitest": "^1.6.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/testing-library__jest-dom": "^5.14.9",
-    "concurrently": "^9.0.0",
     "@vitest/coverage-v8": "^1.6.1",
-    "yaml": "^2.5.1",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@testing-library/jest-dom": "^6.6.3",
-    "jsdom": "^24.1.0"
+    "busboy": "^1.6.0",
+    "concurrently": "^9.0.0",
+    "jsdom": "^24.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.1",
+    "tsup": "^8.0.0",
+    "typescript": "^5.0.0",
+    "uuid": "^9.0.1",
+    "vitest": "^1.6.0",
+    "ws": "^8.18.0",
+    "yaml": "^2.5.1"
+  },
+  "dependencies": {
+    "@tanstack/react-virtual": "^3.13.13"
   }
 }
