Add chat flow testing and QA automation

--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "build:clean": "rm -rf dist && tsup",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts,.tsx || echo \"lint skipped\"",
+    "typecheck": "tsc --noEmit --pretty --project tsconfig.typecheck.json",
     "test": "vitest run",
+    "test:chat": "vitest run --config vitest.chat.config.ts src/__tests__/CustomerSupportChatWidget.flow.test.tsx src/conversations/ConversationWorkspace.test.tsx src/conversations/useConversationFeed.test.tsx",
     "test:coverage": "vitest run --coverage",
+    "test:e2e": "npm run test:chat",
     "env:check": "node scripts/env-check.js",
+    "perf:budget": "node scripts/perf-budget.js",
     "smoke:ai": "vitest run packages/bacon-backend/__tests__/ai.smoke.test.ts",
     "stack:up": "docker compose up --build -d",
     "stack:down": "docker compose down --remove-orphans --volumes",
@@ -52,6 +56,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/uuid": "^9.0.0",
     "@vitest/coverage-v8": "^1.6.1",
     "busboy": "^1.6.0",
     "concurrently": "^9.0.0",
