--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,8 @@ jobs:
           PORT: 3001
           HOST: 0.0.0.0
       - run: npm run lint
+      - run: npm run typecheck
+      - run: npm run test:chat
       - run: npm run test:coverage
       - run: npm run build
+      - run: npm run perf:budget
